crates/cadenza-compiler/test-data/semantics/compound-types-structs-are-nominally-typed.expected
error: type mismatch
 --> test.cdz:5:1
  |
5 | p == v
  | ^^^^^^ cannot compare Point with Vector
  |
  = note: Point and Vector are different nominal types
  = note: even though they have the same fields, nominal typing makes them distinct